Implement parser combinators

--- a/lang/estree/Cargo.toml
+++ b/lang/estree/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "estree-grammar"
+name = "estree_grammar"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
 combine = "3.8.1"
-web-grammars-utils = { path = "../../utils" }
+web_grammars_utils = { path = "../../utils" }
 heck = "0.3.1"
