--- a/lang/html/Cargo.toml
+++ b/lang/html/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "html-grammar"
+name = "html_grammar"
 version = "0.1.0"
 authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
-web-grammars-utils = { path = "../../utils" }
+web_grammars_utils = { path = "../../utils" }
