--- a/lang/html/Cargo.toml
+++ b/lang/html/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
-web_grammars_utils = { path = "../../utils" }
+web_grammar_utils = { path = "../../utils" }
