--- a/lang/javascript/Cargo.toml
+++ b/lang/javascript/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Kevin Stenerson <developer@stenerson.me>"]
 edition = "2018"
 
 [dependencies]
-web_grammar_utils = { path = "../../utils" }
+web_grammar_utils = { path = "../../utils/grammar" }
 combine = "3.8.1"
